[package]
name = "persistence-impl-postgres"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.persistence-interface]
path = "../persistence-interface"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dev-dependencies]
config = "0.14.1"

[dev-dependencies.tokio]
version = "1.41.1"
default-features = false
features = ["macros", "rt-multi-thread"]

